--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -705,6 +705,7 @@ paths:
                 - metadata_list
               properties:
                 metadata_list:
+                  description: A list of dicts containing the metadata for each NFT to be minted
                   type: array
                   items:
                     type: object
@@ -754,24 +755,31 @@ paths:
                   type: integer
                   format: uint16
                   default: 0
-                target_address_list:
+                target_list:
+                  description: a list of targets for transfering minted NFTs (aka airdrop)
                   type: array
                   items:
                     type: string
                     format: hex
                 mint_number_start:
+                  description: The starting point for mint number used in intermediate launcher puzzle
                   type: integer
-                  format: uint64
                   default: 1
                 mint_total:
+                  description: The total number of NFTs being minted
                   type: integer
-                  format: uint64
                 xch_coin_list:
+                  description:
+                    For use with bulk minting to provide the coin used for funding the minting spend.
+                    This coin can be one that will be created in the future
                   type: array
                   items:
                     type: string
                     format: hex
                 xch_change_target:
+                  description:
+                    For use with bulk minting, so we can specify the puzzle hash that the change
+                    from the funding transaction goes to.
                   type: string
                   format: hex
                 new_innerpuzhash:
@@ -1855,6 +1863,9 @@ paths:
                 wallet_id:
                   type: integer
                   format: uint32
+                amount:
+                  type: integer
+                  format: uint64               
                 min_coin_amount:
                   type: integer
                   format: uint64
